--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -13,6 +13,14 @@
   
 
 }
+
+.rettangolino{
+  width: 100px;
+  height: 50px;
+  border: 10px; 
+  border-color: white;
+}
+
 select{
   background-color:#eceff1;
 }
