--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,10 +1,10 @@
 .container {
     position: absolute;
     width: auto;
-    height: auto;
-    top: 40%;
-    left: 30%;
-    right: 35%;
+    height: auto; 
+    top: 5%;
+    left: 20%;
+    right: 25%;
     bottom: 50%;
   ///  margin-left: -50px; /* margin is -0.5 * dimension */
    // margin-top: -25px; 
@@ -18,7 +18,20 @@
   width: 100px;
   height: 50px;
   border: 10px; 
+  
   border-color: white;
+  
+}
+
+
+.rettangolo{
+  align-items: center;
+  width: 350px;
+  height: 200px;
+  border: 10px; 
+  border-color: white;
+  margin: 20px;
+  
 }
 
 select{
